Fix wrong paddings

--- a/search/search.css
+++ b/search/search.css
@@ -10,7 +10,7 @@ main nav {
 
 main nav a {
   font-size: 14px;
-  padding: 7px 20px 3px 20px;
+  padding: 6px 20px 6px 20px;
   border-bottom: none;
 }
 
@@ -34,9 +34,10 @@ main ul {
 }
 
 main ul a {
-  padding: 8px 10px 5px 10px;
+  padding: 8px 10px 8px 10px;
   display: flex;
   color: black;
+  border-radius: 5px;
 }
 
 main ul a span:first-of-type {
